--- a/Server/backend/templates/missions.html
+++ b/Server/backend/templates/missions.html
@@ -37,13 +37,24 @@
 					var missions = new Array();
 					var out = "";
 					for (var i = 0; i < data['missions'].length; i++) {
-							var mission = new Object();
-							mission.ID =  data['missions'][i][0];
-							mission.Type = data['missions'][i][1];
-
+						var mission = new Object();
+						mission.ID =  data['missions'][i][0];
+						mission.Type = data['missions'][i][1];
+						mission.RewardID = data['missions'][i][2];
+						
+						// Get the Reward data for each mission
+						var jsonArg = new Object();
+						jsonArg.rewardid = mission.RewardID
+						
+						request("/reward/get", jsonArg, function(rewarddata, _1, _2)
+						{
+							// TODO
+						}).done(function()
+						{
 							out += "<tr> <td> Mission " + mission.ID + "</td>";
 							out += "<td>" + mission.Type + "</td>";
 							out += "<td>$100</td> </tr>";
+						}
 					}
 					$(out).appendTo("#missions");
 					
