--- a/Server/backend/templates/shop.html
+++ b/Server/backend/templates/shop.html
@@ -54,7 +54,7 @@
         {
             options += '<option value = ' + characters[i].id + '>' + character[i].name + '</option>';
         }
-        $(options).appendTo("#character");
+        $(options).appendTo("#characters");
       });
 
       request("/getPurchasables", {}, function(data, _1, _2)
