--- a/Server/backend/templates/shop.html
+++ b/Server/backend/templates/shop.html
@@ -52,7 +52,7 @@
         var options;
         for (var i = 0; i < characters.length; i++)
         {
-            options += '<option value = ' + characters[i].id + '>' + character[i].name + '</option>';
+            options += '<option value = ' + characters[i].id + '>' + characters[i].name + '</option>';
         }
         $(options).appendTo("#character");
       });
