Fixed Shop page purchase

--- a/Server/backend/templates/shop.html
+++ b/Server/backend/templates/shop.html
@@ -84,7 +84,7 @@
 
 	function purchase(recipe) 
 	{
-		var selectedChar = $('characters');
+		var selectedChar = $('#characters').val();
 
 		var jsonArg = new Object();
 		jsonArg.recipe = recipe;
