--- a/Server/backend/templates/shop.html
+++ b/Server/backend/templates/shop.html
@@ -11,13 +11,16 @@
 
   </head>
 
-  <body onload="populatTable()">
+  <body>
 
     <div class="container">
-      <form class="form-signin" id="shop-form" role="form" method="post">
-
-      Character <select id = "characters">
-      </select>
+    	<div id="characterInfo" class="table table-bordered" style="padding:10px;">
+            <form class="form-signin" id="shop-form" role="form" method="post">
+            
+            Character <select id = "characters">
+            </select>
+            <span style="float:right;">Gold <span id="gold"></span></span>
+		</div>
 
       <table class="table table-bordered" id = "purchasables" cellpadding="10">
       <tr name="data" >
@@ -33,87 +36,99 @@
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
 
     <script>
-      //populates the character datalist
+	//populates the character datalist
+	var characters = new Array();
+	request("/character/getAll", {}, function(data, _1, _2)
+	{
+		for (var i=0; i < data['characters'].length; i++)
+		{
+		  var character = new Object();
+		  character.id   = data['characters'][i][0];
+		  character.name = data['characters'][i][2];
+		
+		  characters.push(character);
+		}
+	var options;
+	for (var i = 0; i < characters.length; i++)
+	{
+		options += '<option value = ' + characters[i].id + '>' + characters[i].name + '</option>';
+	}
+	$("#characters").append(options);
+	
+	});
+	
+	displayMoney();
 
-      var characters = new Array();
-      request("/character/getAll", {}, function(data, _1, _2)
-      {
-          for (var i=0; i < data['characters'].length; i++)
-          {
-              var character = new Object();
-              character.id   = data['characters'][i][0];
-              character.name = data['characters'][i][2];
-
-              characters.push(character);
-          }
-    var options;
-        for (var i = 0; i < characters.length; i++)
-        {
-            options += '<option value = ' + characters[i].id + '>' + characters[i].name + '</option>';
-        }
-        $("#characters").append(options);
-
-      });
-
-      request("/getPurchasables", {}, function(data, _1, _2)
-      {
-      var items = data['purchasables'];
-      var table = $("#purchasables");
-      for (var i = 0; i < items.length; i++)
-      {
-        var item = items[i];
-        var row = insertRow(table);
-        row.attr('id', i);
-        insertCell(row).append(item.name);
-        insertCell(row).append(item.cost);
-        var btnCell = insertCell(row);
-        var btn = insert(btnCell, 'button');
-        btn.attr('id', 'purchasebtn');
-        btn.addClass('btn btn-default btn-xs');
-        btn.append("Buy");
-        btn.on('click', function(event)
-        {
-          event.preventDefault();
-          purchase(item.recipe);
-        });
-      }
-    });
+	request("/getPurchasables", {}, function(data, _1, _2)
+	{
+		var items = data['purchasables'];
+		var table = $("#purchasables");
+		for (var i = 0; i < items.length; i++)
+		{
+			var item = items[i];
+			var row = insertRow(table);
+			row.attr('id', i);
+			insertCell(row).append(item.name);
+			insertCell(row).append(item.cost);
+			var btnCell = insertCell(row);
+			var btn = insert(btnCell, 'button');
+			btn.attr('id', 'purchasebtn');
+			btn.addClass('btn btn-default btn-xs');
+			btn.append("Buy");
+			btn.on('click', function(event)
+			{
+				event.preventDefault();
+				purchase(item.recipe);
+			});
+		}
+	});
 
         //takes the index of the row clicked and sends the appropriate recipe request
 
-  function purchase(recipe)
-  {
-    var selectedChar = $('#characters').val();
-
-    var jsonArg = new Object();
-    jsonArg.recipe = recipe;
-    jsonArg.charid = selectedChar;
-
-    request("/recipe/use", jsonArg, function(data, _1, _2)
-    {
-        if(data.result) {
-          alert("Purchase Successful");
-          //showAlert("Purchase Successful", true, 1000);
-        } else {
-          alert("You cannot purchase this item");
-          //showAlert("You cannot purchase this item", false, 1000);
-        }
-    });
-  }
+	function purchase(recipe)
+	{
+		var selectedChar = $('#characters').val();
+		
+		var jsonArg = new Object();
+		jsonArg.recipe = recipe;
+		jsonArg.charid = selectedChar;
+		
+		request("/recipe/use", jsonArg, function(data, _1, _2)
+		{
+			if(data.result) {
+			  alert("Purchase Successful");
+			  //showAlert("Purchase Successful", true, 1000);
+			} else {
+			  alert("You cannot purchase this item");
+			  //showAlert("You cannot purchase this item", false, 1000);
+			}
+		});
+	}
 
   //gets the Gold inventory from the character depending on the selected character
 
   $(function(){
-    $('#characters').change(function(){
-      request("/character/inventory/getgold", {}, function(data, _1, _2)
+    $('#characters').change(function(){ displayMoney()});
+  });
+  
+  var MONEY_ID = "#gold"
+  function displayMoney()
+  {
+	  var jsonArg = new Object();
+	  jsonArg.charid = $('#characters').val();
+	  
+	  request("/character/inventory/getgold", jsonArg, function(data, _1, _2)
       {
         var inv = data['inventory'];
-        var lbl = $("#gold");
-        var gold = inv[0].quantity;
+        var lbl = $(MONEY_ID);
+		var gold;
+		if(inv.length > 0)
+        	gold = inv[0].quantity;
+		else
+			gold = 0;
         lbl.text(gold);
-      }
-    });
-  });
+      });
+  }
     </script>
   </body>
 </html>
